# cleantxt

./: .gitignore  Changelog  Doxyfile  Makefile.am  Makefile.dir  Makefile.djg  Makefile.lnx  Makefile.pkg  Makefile.rul  README  TODO  cleanstr.c  cleanstr.h  cleantxt.spec  cleantxt.xml  configure.ac  filemgmt.c  filemgmt.h  main.c  options.c  options.h  procfile.c  procfile.h  streamio.c  streamio.h
compat/: Makefile.am  Makefile.dir  error.c  error.h  goptlong.c  goptlong.h  progname.c  progname.h
tests/: Makefile.am  ckclnstr.c  ckflmgmt.c  ckoptns.c  ckprcfil.c  ckstrmio.c
tests/helpers/: Makefile.am  hexcdiff.c  hexcdiff.h  io.c  io.h  runner.c
